--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -4,15 +4,17 @@
   <tr>
     <th>Home team</th>
     <th>Away team</th>
-    <th></th>
-    <th></th>
+    <th>Home Score</th>
+    <th>Away Score</th>
     <th></th>
   </tr>
 
 <% @games.each do |game| %>
   <tr>
-    <td><%= game.home_team_id %></td>
-    <td><%= game.away_team_id %></td>
+    <td><%= game.home_team.name %></td>
+    <td><%= game.away_team.name %></td>
+    <td><%= game.home_score %></td>
+    <td><%= game.away_score %></td>
     <td><%= link_to 'Show', game %></td>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td><%= link_to 'Destroy', game, confirm: 'Are you sure?', method: :delete %></td>
