--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -12,7 +12,7 @@
 <% @players.each do |player| %>
   <tr>
     <td><%= player.name %></td>
-    <td><%= player.team_id %></td>
+    <td><%= player.team.name %></td>
     <td><%= link_to 'Show', player %></td>
     <td><%= link_to 'Edit', edit_player_path(player) %></td>
     <td><%= link_to 'Destroy', player, confirm: 'Are you sure?', method: :delete %></td>
