--- a/app/views/boxscores/_form.html.erb
+++ b/app/views/boxscores/_form.html.erb
@@ -11,14 +11,16 @@
     </div>
   <% end %>
 
+<% 10.times do %>
+
   <div class="field">
     <%= f.label :game_id %><br />
     <%= f.number_field :game_id %>
   </div>
   <div class="field">
-    <%= f.label :player_id %><br />
-    <%= f.number_field :player_id %>
-  </div>
+    <%= f.label :player_id, "Choose a player" %>
+    <%= f.select :player_id, Player.all.map{|t| [t.name, t.id]}, { :include_blank => true } %>
+	</div>
   <div class="field">
     <%= f.label :points %><br />
     <%= f.text_field :points %>
@@ -59,7 +61,9 @@
     <%= f.label :threepointmade %><br />
     <%= f.text_field :threepointmade %>
   </div>
+<% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
