--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,9 @@
 <header>
     <tr>
-      <trh><%= link_to "Home", root_path %></th>
+      <tr><%= link_to "Home", root_path %></th>
       <th><%= link_to "Players", players_path %></th>
-      <th><%= link_to "Boxscores", boxscores_path %></th>
+			<th><%= link_to "Teams", teams_path %></th>
       <th><%= link_to "Games", games_path %></th>
+      <th><%= link_to "Boxscores", boxscores_path %></th>
     </ul>
 </header>
