--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -16,6 +16,7 @@
     <td><%= game.home_score %></td>
     <td><%= game.away_score %></td>
 		<td><%= game.game_date %></td>
+		<td><%= game.game_date %></td>
     <td><%= link_to 'Show', game %></td>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td><%= link_to 'Destroy', game, confirm: 'Are you sure?', method: :delete %></td>
