--- a/app/views/boxscores/edit.html.erb
+++ b/app/views/boxscores/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @boxscore %> |
-<%= link_to 'Back', boxscores_path %>
+<%= link_to 'Back', games_boxscores_path %>
