--- a/app/views/boxscores/show.html.erb
+++ b/app/views/boxscores/show.html.erb
@@ -61,5 +61,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_boxscore_path(@boxscore) %> |
-<%= link_to 'Back', boxscores_path %>
+<%= link_to 'Edit', edit_game_boxscore_path(@game, boxscore) %> 
+<%= link_to 'Back', game_boxscores_path %>
