--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,6 @@
       <th><%= link_to "Players", players_path %></th>
 			<th><%= link_to "Teams", teams_path %></th>
       <th><%= link_to "Games", games_path %></th>
-      <th><%= link_to "Boxscores", boxscores_path %></th>
+			<th><%= link_to "Boxscores", game_boxscore_path(@game, @boxscore) %></th>
     </ul>
 </header>
