--- a/app/views/boxscores/_form.html.erb
+++ b/app/views/boxscores/_form.html.erb
@@ -1,10 +1,6 @@
-<%= form_for @boxscore do |f| %>
-	<% f.fields_for :boxscores do |f| %>
+<%= form_for(@boxscore, :url => game_boxscores_path(@game)) do |f| %>
 		
-		<div class="field">
-		    <%= f.label :game_id %><br />
-		    <%= f.number_field :game_id %>
-		  </div>
+
 		  <div class="field">
 		    <%= f.label :player_id, "Choose a player" %>
 		    <%= f.select :player_id, Player.all.map{|t| [t.name, t.id]}, { :include_blank => true } %>
@@ -49,7 +45,7 @@
 		    <%= f.label :threepointmade %><br />
 		    <%= f.text_field :threepointmade %>
 		  </div>		
-		<% end %>
+
 	<div class="actions">
 		<%= f.submit %>
 	</div>
