--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -16,7 +16,7 @@
     <td><%= game.home_score %></td>
     <td><%= game.away_score %></td>
 		<td><%= game.game_date %></td>
-		<td><%= link_to 'New Boxscore', new_game_boxscore_path(@game, @boxscore) %></td>
+		<td><%= link_to 'New Boxscore' %></td>
     <td><%= link_to 'Show', game %></td>
     <td><%= link_to 'Edit', edit_game_path(game) %></td>
     <td><%= link_to 'Destroy', @boxscore, :confirm => 'Are you sure?', :method => :delete %></td>
